$mergeCursors is not reparseable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Query Integration
    • Fully Compatible
    • ALL
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We serialize the whole remotes.cursorResponse object as a literal, but {?: ?} is not a valid command response, so it is not reparseable.

      We should either choose a representative shape that is a valid command response or else serialize remotes as an empty array.

            Assignee:
            Alyssa Clark (Inactive)
            Reporter:
            Alyssa Clark (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: