SERVER-118910 Fix $mergeCursors query shape to support reparsing (#47660)

GitOrigin-RevId: dea1b94e989f591cf1237f63c98354ab3541ab3d